# HPINV-SQL-Manager

./: pyproject.toml
src/hpinv_sql/: __init__.py  query_path_registry.py  sql_manager.py
src/hpinv_sql.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hpinv_sql_pull/: __init__.py  sql_manager.py
src/hpinv_sql_pull.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
